host information to the authentication stack. A fix to the logging code to work
around PAM brokenness was made. A memory leak in auth-ldap was fixed. The
amount of data transferred to/from the client is recorded. Fixed some bugs
which caused crashes on old versions of Solaris.

Added support for authentication against /etc/passwd-style flat text files,
contributed by Angel Marin.

1.4.1

Hooks for POP-before-SMTP relaying support were implemented in tpop3d, and
support for same in TPOP3D::AuthDriver.

Incorporated LDAP support by Sebastien Thomas. The internal semantics of
authentication were changed slightly.

Added the option to ignore a domain name supplied by a user, based upon code
supplied by Dom Gallagher.

The facility as which tpop3d logs messages may now be changed from the
configuration file.

A serious bug in TPOP3D::AuthDriver which affected operation under
auth-other was corrected. Fixed the behaviour of STAT after DELE. A bug in the
experimental BSD metadata cache code was fixed. A memory leak in the stringmap
code which affected auth-perl and auth-other was fixed. Fixed a reference
counting problem which could cause auth-perl's perl interpreter to leak
memory. Added some notes to tpop3d.conf(5) on memory and resource leaks.

{md5} passwords may now be encoded in base64 as well as hex, for compatibility
with Exim and LDAP.

UIDs in maildir mailboxes are now generated by an MD5 hash of the file name,
fixing a uniqueness problem in previous versions. This means that this version
of tpop3d will display different UIDs by comparison with old versions. See the
comment in the maildir_make_indexpoint function in maildir.c, and also the
archived mailing list posting at
  http://lists.beasts.org/pipermail/tpop3d-discuss/2001-November/000308.html
for more information, or if you want to use the old scheme regardless (not
recommended). In addition, tpop3d now marks messages in maildirs as `seen',