@@ -28,6 +28,10 @@ Ben Schumacher-- for bug fixes and useful commentary.
 
 Jason Clifford-- for an enhancement of the PAM code.
 
+Michael Klatsky and Marc Lewis-- for helping to fix bugs in the LDAP code.
+
+Angel Marin-- for the auth-flatfile authenticator.
+
 And numerous others, for putting up with foolish questions about Unix
 mailspool handling or (more often) indignant rants about Unix in general and
 the sorry state of file locking in particular.
