@@ -35,3 +35,6 @@ Hooks exist in three authentication drivers:
 There is example code for auth-other and auth-perl in scripts/relaydbm.
 Full documentation is in the tpop3d.conf manual page.
 
+In addition, tpop3d can contact a DRAC server to inform it about successful
+logins. For more about DRAC, see http://mail.cc.umanitoba.ca/drac/.
+
