@@ -7,11 +7,13 @@ listen-address: 127.0.0.1:9000
 
 log-facility: local0
 
-apop-only:  yes
+#apop-only:  yes
 
 no-detach: yes
 
 log-stderr: yes
+
+drac-server: localhost
 
 max-children:           16
 
